# DIODesenvolvimentoFullStackPythonComDjango

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml  requirements.txt
accounts/: views.py
accounts/templates/accounts/: login.html
contacts/: apps.py  models.py  urls.py  views.py
contacts/migrations/: 0001_initial.py
contacts/templates/contacts/: create.html
mysite/: admin.py  settings.py  urls.py
polls/: admin.py  models.py  views.py
polls/migrations/: 0001_initial.py  0002_question_active.py  0003_question_x.py  0004_remove_question_x.py  0005_alter_choice_options_alter_question_options_and_more.py
polls/templates/polls/: detail.html  index.html
tests/contacts/: test_forms.py  test_views.py
tests/polls/: test_models.py
